--- a/index.html
+++ b/index.html
@@ -1,198 +1,56 @@
 <!DOCTYPE html>
 <html lang="ar">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>تطبيق مراسلة</title>
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
-    import { getDatabase, ref, set, get, child, onValue, update } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-database.js";
-
-    const firebaseConfig = {
-      apiKey: "AIzaSyDkL37i0-pd885YbCBYOkADYQVQINcswhk",
-      authDomain: "messengerapp-58f7a.firebaseapp.com",
-      databaseURL: "https://messengerapp-58f7a-default-rtdb.firebaseio.com",
-      projectId: "messengerapp-58f7a",
-      storageBucket: "messengerapp-58f7a.appspot.com",
-      messagingSenderId: "46178168523",
-      appId: "1:46178168523:web:cba8a71de3d7cc5910f54e"
-    };
-
-    const app = initializeApp(firebaseConfig);
-    const db = getDatabase();
-
-    let currentUser = null;
-
-    window.signup = function() {
-      const username = document.getElementById("signup-username").value;
-      const password = document.getElementById("signup-password").value;
-
-      if (username && password) {
-        const userRef = ref(db, 'users/' + username);
-        get(userRef).then(snapshot => {
-          if (snapshot.exists()) {
-            alert("اسم المستخدم مسجل بالفعل");
-          } else {
-            set(userRef, {
-              username,
-              password,
-              status: "online",
-              lastSeen: new Date().toISOString(),
-              friends: []
-            }).then(() => {
-              alert("تم إنشاء الحساب. قم بتسجيل الدخول الآن.");
-            });
-          }
-        });
-      }
-    }
-
-    window.login = function() {
-      const username = document.getElementById("login-username").value;
-      const password = document.getElementById("login-password").value;
-
-      const userRef = ref(db, 'users/' + username);
-      get(userRef).then(snapshot => {
-        if (snapshot.exists()) {
-          const user = snapshot.val();
-          if (user.password === password) {
-            currentUser = username;
-            update(userRef, { status: "online" });
-            document.getElementById("auth").style.display = "none";
-            document.getElementById("chat").style.display = "block";
-            loadFriends();
-          } else {
-            alert("كلمة مرور غير صحيحة");
-          }
-        } else {
-          alert("لا يوجد مستخدم بهذا الاسم");
-        }
-      });
-    }
-
-    window.logout = function() {
-      if (currentUser) {
-        update(ref(db, 'users/' + currentUser), {
-          status: "offline",
-          lastSeen: new Date().toISOString()
-        });
-        currentUser = null;
-        document.getElementById("chat").style.display = "none";
-        document.getElementById("auth").style.display = "block";
-      }
-    }
-
-    window.addFriend = function() {
-      const friendName = document.getElementById("friend-username").value;
-      const userRef = ref(db, 'users/' + friendName);
-
-      if (friendName === currentUser) {
-        alert("لا يمكنك إضافة نفسك");
-        return;
-      }
-
-      get(userRef).then(snapshot => {
-        if (snapshot.exists()) {
-          const currentUserRef = ref(db, 'users/' + currentUser + '/friends');
-          get(currentUserRef).then(friendsSnapshot => {
-            let friends = friendsSnapshot.val() || [];
-            if (!friends.includes(friendName)) {
-              friends.push(friendName);
-              set(currentUserRef, friends);
-              // إضافة عكسية
-              const friendRef = ref(db, 'users/' + friendName + '/friends');
-              get(friendRef).then(fr => {
-                let f = fr.val() || [];
-                if (!f.includes(currentUser)) {
-                  f.push(currentUser);
-                  set(friendRef, f);
-                }
-              });
-              loadFriends();
-            } else {
-              alert("تمت إضافته مسبقًا");
-            }
-          });
-        } else {
-          alert("لا يوجد مستخدم بهذا الاسم");
-        }
-      });
-    }
-
-    function loadFriends() {
-      const friendList = document.getElementById("friend-list");
-      friendList.innerHTML = "";
-      const userFriendsRef = ref(db, 'users/' + currentUser + '/friends');
-      get(userFriendsRef).then(snapshot => {
-        let friends = snapshot.val() || [];
-        friends.forEach(friend => {
-          const friendRef = ref(db, 'users/' + friend);
-          get(friendRef).then(fs => {
-            const f = fs.val();
-            const li = document.createElement("li");
-            li.textContent = `${friend} - ${f.status} - آخر ظهور: ${new Date(f.lastSeen).toLocaleString()}`;
-            li.onclick = () => loadChat(friend);
-            friendList.appendChild(li);
-          });
-        });
-      });
-    }
-
-    function loadChat(friend) {
-      const chatBox = document.getElementById("chat-box");
-      chatBox.innerHTML = "";
-      const chatRef = ref(db, `chats/${[currentUser, friend].sort().join("_")}`);
-      onValue(chatRef, snapshot => {
-        chatBox.innerHTML = "";
-        const messages = snapshot.val();
-        for (let key in messages) {
-          const msg = messages[key];
-          const div = document.createElement("div");
-          div.textContent = `${msg.sender}: ${msg.text}`;
-          chatBox.appendChild(div);
-        }
-      });
-
-      document.getElementById("send-btn").onclick = function () {
-        const msg = document.getElementById("message").value;
-        if (msg) {
-          const newMsgRef = ref(db, `chats/${[currentUser, friend].sort().join("_")}/${Date.now()}`);
-          set(newMsgRef, {
-            sender: currentUser,
-            text: msg
-          });
-          document.getElementById("message").value = "";
-        }
-      }
-    }
-
-  </script>
+  <script type="module" src="script.js" defer></script>
+  <style>
+    body { font-family: sans-serif; background: #f0f0f0; padding: 20px; }
+    .hidden { display: none; }
+    .chat, .login, .signup, .friends, .settings { margin-bottom: 20px; }
+    .message { background: #fff; padding: 10px; margin: 5px 0; border-radius: 8px; }
+  </style>
 </head>
 <body>
-  <div id="auth">
-    <h2>تسجيل دخول</h2>
-    <input id="login-username" placeholder="اسم المستخدم">
-    <input id="login-password" placeholder="كلمة المرور" type="password">
-    <button onclick="login()">دخول</button>
 
-    <h2>إنشاء حساب</h2>
-    <input id="signup-username" placeholder="اسم المستخدم">
-    <input id="signup-password" placeholder="كلمة المرور" type="password">
-    <button onclick="signup()">تسجيل</button>
+  <div class="login">
+    <h2>تسجيل الدخول</h2>
+    <input id="loginUser" placeholder="اسم المستخدم" /><br />
+    <input id="loginPass" type="password" placeholder="كلمة المرور" /><br />
+    <button onclick="login()">تسجيل دخول</button>
+    <p>ليس لديك حساب؟ <a href="#" onclick="toggleForm('signup')">أنشئ حساب</a></p>
   </div>
 
-  <div id="chat" style="display:none">
-    <h2>مرحبًا بك</h2>
-    <input id="friend-username" placeholder="اسم صديق لإضافته">
-    <button onclick="addFriend()">إضافة صديق</button>
-    <ul id="friend-list"></ul>
+  <div class="signup hidden">
+    <h2>إنشاء حساب</h2>
+    <input id="signupUser" placeholder="اسم المستخدم" /><br />
+    <input id="signupPass" type="password" placeholder="كلمة المرور" /><br />
+    <button onclick="signup()">تسجيل</button>
+    <p>لديك حساب؟ <a href="#" onclick="toggleForm('login')">سجّل دخول</a></p>
+  </div>
 
-    <div id="chat-box" style="border:1px solid #ccc; height:200px; overflow:auto;"></div>
-    <input id="message" placeholder="اكتب رسالتك">
-    <button id="send-btn">إرسال</button>
+  <div class="friends hidden">
+    <h3>قائمة الأصدقاء</h3>
+    <input id="searchFriend" placeholder="بحث عن صديق" />
+    <button onclick="addFriend()">إضافة</button>
+    <div id="friendList"></div>
+  </div>
 
+  <div class="chat hidden">
+    <h3>الدردشة مع <span id="chatWith"></span></h3>
+    <div id="chatBox" style="height: 200px; overflow-y: scroll; background: #fff; padding: 10px;"></div>
+    <input id="message" placeholder="اكتب رسالة..." />
+    <button onclick="sendMessage()">إرسال</button>
+    <br /><br />
+    <button onclick="showFriends()">رجوع لقائمة الأصدقاء</button>
+  </div>
+
+  <div class="settings hidden">
     <h3>الإعدادات</h3>
-    <button onclick="logout()">تسجيل خروج</button>
+    <button onclick="logout()">تسجيل الخروج</button>
     <a href="https://t.me/UUYFU" target="_blank">الإبلاغ عن مشكلة</a>
   </div>
+
 </body>
 </html>
